<resources>
    <string name="app_name">Utopia2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="load_data_failed">数据加载失败</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="re_password">确认密码</string>
    <string name="registe">注册</string>
    <string name="forge_password">忘记密码</string>
    <string name="login">登陆</string>
    <string name="Null">null</string>
    <string name="app_introduction">Manage your life.</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="task">任务</string>
    <string name="sport">运动</string>
    <string name="leisure">休闲</string>
    <string name="health">健康</string>
    <string name="efficient">效率</string>
    <string name="flag">Flag</string>
    <string name="about">关于</string>
    <string name="settings">设置</string>

    <string name="discover_item_light">亮了</string>
    <string name="discover_item_comment">评论</string>
    <string name="limited_task">限时任务</string>
    <string name="memembers">成员：</string>
    <string name="time">时间：</string>
    <string name="location">地点：</string>
    <string name="addition">补充：</string>


    <string name="hint">Search</string>
    <string name="speech_prompt">Say Something</string>
    <string name="speech_not_supported">speech to text doesn\'t seems supported</string>
    <string name="menu.clear">clear</string>
    <string name="menu.tts">text to speech</string>
    <string name="menu.toggle.icon">Icon Visible</string>
    <string name="menu.icon.type">Icon Type</string>
    <string name="create_task">创建任务</string>
    <string name="task_name">任务名称</string>
    <string name="tast_description">任务描述</string>
    <string name="pick_time">选择时间</string>
    <string name="pick_members">选择成员</string>
    <string name="topic">话题</string>
    <string name="more">更多</string>
    <string name="nick_name">昵称</string>
    <string name="check_or_edit">查看或编辑个人信息</string>
    <string name="my_topic">关注的话题</string>
    <string name="my_fans">我的粉丝</string>
    <string name="followed">我关注的</string>
    <string name="my_actvivity">我的活动</string>
    <string name="my_reply">我的回复</string>
    <string name="my_theme">我的主题</string>
</resources>
