<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="20dp"
    tools:context="com.example.socer.utopia2.mvp.ui.fragments.RegisteFragment">

    <LinearLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <requestFocus/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/re_password"
                android:hint="@string/re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <at.markushi.ui.CircleButton
        app:cb_color="@color/colorPrimary"
        app:cb_pressedRingWidth="8dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/ic_keyboard_arrow_right_white_36dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>
