<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_task"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.socer.utopia2.mvp.ui.activities.AddTaskActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <at.markushi.ui.CircleButton
                android:id="@+id/back"
                android:layout_gravity="center|start"
                app:cb_color="@color/colorPrimary"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_task"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="0dp">
            <requestFocus/>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/task_name"
                android:layout_marginStart="10dp"
                android:textColorHint="#b9b9b9"
                android:singleLine="true"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:inputType="text" />
            <View
                android:background="#33000000"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="1dp"/>
            <EditText
                android:hint="@string/tast_description"
                android:background="@android:color/transparent"
                android:textColorHint="#b9b9b9"
                android:layout_margin="10dp"
                android:gravity="top"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="100dp" />
            <View
                android:background="#33000000"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="1dp"/>
            <android.support.v7.widget.CardView
                android:id="@+id/pick_time_card"
                app:cardElevation="0dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="0dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/pick_time_text"
                        android:textSize="20sp"
                        android:textColor="#b9b9b9"
                        android:text="@string/pick_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/pick_member_card"
                app:cardElevation="0dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="0dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/pick_member_text"
                        android:textSize="20sp"
                        android:textColor="#b9b9b9"
                        android:text="@string/pick_members"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
