<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.socer.utopia2.mvp.ui.activities.TimeLimitedTaskActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <at.markushi.ui.CircleButton
                android:id="@+id/back"
                android:layout_gravity="center|start"
                app:cb_color="@color/colorPrimary"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent" />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limited_task"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="0dp">
            <requestFocus/>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.CardView
        app:cardElevation="0dp"
        android:clickable="true"
        app:cardCornerRadius="0dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/time"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="50dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/memembers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/members"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="50dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/location"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="50dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/addition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:labelFor="@+id/addition"
                android:id="@+id/addition"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="text" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <at.markushi.ui.CircleButton
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/sign_in"
        app:cb_color="@color/colorPrimary"
        android:src="@drawable/sign_in"
        android:layout_width="65dp"
        android:layout_height="65dp" />

</LinearLayout>
