<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.socer.utopia2.mvp.ui.activities.MyUserInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleGravity="center|bottom"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/head_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginRight="25dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="0.537"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="32dp" />
                <TextView
                    android:text="这是一个签名"
                    android:id="@+id/user_signature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/head_pic"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetLeft="0dp"
                app:layout_collapseMode="pin"
                app:contentInsetStart="0dp"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="0dp"
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.CardView
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:id="@+id/my_topics"
                        android:layout_width="match_parent"
                        app:cardCornerRadius="0dp"
                        android:layout_height="50dp">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/topic"
                                android:layout_width="24dp"
                                android:layout_height="24dp"/>
                            <TextView
                                android:text="@string/my_topic"
                                android:textSize="20sp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="32dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:id="@+id/my_fans"
                        android:layout_width="match_parent"
                        app:cardCornerRadius="0dp"
                        android:layout_height="50dp">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/fans"
                                android:layout_width="24dp"
                                android:layout_height="24dp"/>
                            <TextView
                                android:text="@string/my_fans"
                                android:textSize="20sp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="32dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:id="@+id/followed"
                        android:layout_width="match_parent"
                        app:cardCornerRadius="0dp"
                        android:layout_height="50dp">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/follow"
                                android:layout_width="24dp"
                                android:layout_height="24dp"/>
                            <TextView
                                android:text="@string/followed"
                                android:textSize="20sp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="32dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="0dp"
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.CardView
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:id="@+id/my_actvivty"
                        android:layout_width="match_parent"
                        app:cardCornerRadius="0dp"
                        android:layout_height="50dp">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/activity"
                                android:layout_width="24dp"
                                android:layout_height="24dp"/>
                            <TextView
                                android:text="@string/my_actvivity"
                                android:textSize="20sp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="32dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:id="@+id/my_reply"
                        android:layout_width="match_parent"
                        app:cardCornerRadius="0dp"
                        android:layout_height="50dp">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/reply"
                                android:layout_width="24dp"
                                android:layout_height="24dp"/>
                            <TextView
                                android:text="@string/my_reply"
                                android:textSize="20sp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="32dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:id="@+id/my_theme"
                        android:layout_width="match_parent"
                        app:cardCornerRadius="0dp"
                        android:layout_height="50dp">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/theme"
                                android:layout_width="24dp"
                                android:layout_height="24dp"/>
                            <TextView
                                android:text="@string/my_theme"
                                android:textSize="20sp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="32dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
